// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin page > form wrapper renders a legend if provided 1`] = `
<div
  className="ds-l-container card"
>
  <div
    className="ds-l-row ds-u-radius ds-u-padding-y--5"
  >
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-left--auto"
    />
    <div
      className="ds-l-col--6 ds-u-fill--white ds-u-padding-y--5"
    >
      <h1
        className="ds-h1"
      >
        <h6
          className="ds-h6"
        >
          ADMINISTRATOR
        </h6>
        test
      </h1>
      <form
        onSubmit={[Function]}
      >
        <fieldset
          className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
        >
          <legend
            className="sr-only"
          >
            of zelda
          </legend>
          hello world
          <div
            className="ds-u-margin-top--5"
          >
            <Button
              onClick={[Function]}
              type="button"
              variation="transparent"
            >
              Cancel
            </Button>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-right--auto"
    />
  </div>
</div>
`;

exports[`admin page > form wrapper renders a spinny-wheel on the save button and disables it if the form is busy 1`] = `
<div
  className="ds-l-container card"
>
  <div
    className="ds-l-row ds-u-radius ds-u-padding-y--5"
  >
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-left--auto"
    />
    <div
      className="ds-l-col--6 ds-u-fill--white ds-u-padding-y--5"
    >
      <h1
        className="ds-h1"
      >
        <h6
          className="ds-h6"
        >
          ADMINISTRATOR
        </h6>
        test
      </h1>
      <form
        onSubmit={[Function]}
      >
        <fieldset
          className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
        >
          hello world
          <div
            className="ds-u-margin-top--5"
          >
            <Button
              disabled={true}
              type="submit"
              variation="primary"
            >
              <Spinner
                aria-valuetext="Loading"
                role="progressbar"
              />
               Working
            </Button>
            <Button
              onClick={[Function]}
              type="button"
              variation="transparent"
            >
              Cancel
            </Button>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-right--auto"
    />
  </div>
</div>
`;

exports[`admin page > form wrapper renders a success alert if message provided 1`] = `
<div
  className="ds-l-container card"
>
  <div
    className="ds-l-row ds-u-radius ds-u-padding-y--5"
  >
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-left--auto"
    />
    <div
      className="ds-l-col--6 ds-u-fill--white ds-u-padding-y--5"
    >
      <Alert
        variation="success"
      >
        oh yeah!
      </Alert>
      <h1
        className="ds-h1"
      >
        <h6
          className="ds-h6"
        >
          ADMINISTRATOR
        </h6>
        test
      </h1>
      <form
        onSubmit={[Function]}
      >
        <fieldset
          className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
        >
          hello world
          <div
            className="ds-u-margin-top--5"
          >
            <Button
              onClick={[Function]}
              type="button"
              variation="transparent"
            >
              Cancel
            </Button>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-right--auto"
    />
  </div>
</div>
`;

exports[`admin page > form wrapper renders an error alert if message provided 1`] = `
<div
  className="ds-l-container card"
>
  <div
    className="ds-l-row ds-u-radius ds-u-padding-y--5"
  >
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-left--auto"
    />
    <div
      className="ds-l-col--6 ds-u-fill--white ds-u-padding-y--5"
    >
      <Alert
        variation="error"
      >
        oh noes!
      </Alert>
      <h1
        className="ds-h1"
      >
        <h6
          className="ds-h6"
        >
          ADMINISTRATOR
        </h6>
        test
      </h1>
      <form
        onSubmit={[Function]}
      >
        <fieldset
          className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
        >
          hello world
          <div
            className="ds-u-margin-top--5"
          >
            <Button
              onClick={[Function]}
              type="button"
              variation="transparent"
            >
              Cancel
            </Button>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-right--auto"
    />
  </div>
</div>
`;

exports[`admin page > form wrapper renders with a save button if onSave prop is provided 1`] = `
<div
  className="ds-l-container card"
>
  <div
    className="ds-l-row ds-u-radius ds-u-padding-y--5"
  >
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-left--auto"
    />
    <div
      className="ds-l-col--6 ds-u-fill--white ds-u-padding-y--5"
    >
      <h1
        className="ds-h1"
      >
        <h6
          className="ds-h6"
        >
          ADMINISTRATOR
        </h6>
        test
      </h1>
      <form
        onSubmit={[Function]}
      >
        <fieldset
          className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
        >
          hello world
          <div
            className="ds-u-margin-top--5"
          >
            <Button
              disabled={false}
              type="submit"
              variation="primary"
            >
              Save changes
            </Button>
            <Button
              onClick={[Function]}
              type="button"
              variation="transparent"
            >
              Cancel
            </Button>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-right--auto"
    />
  </div>
</div>
`;

exports[`admin page > form wrapper renders without a save button if onSave prop is missing 1`] = `
<div
  className="ds-l-container card"
>
  <div
    className="ds-l-row ds-u-radius ds-u-padding-y--5"
  >
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-left--auto"
    />
    <div
      className="ds-l-col--6 ds-u-fill--white ds-u-padding-y--5"
    >
      <h1
        className="ds-h1"
      >
        <h6
          className="ds-h6"
        >
          ADMINISTRATOR
        </h6>
        test
      </h1>
      <form
        onSubmit={[Function]}
      >
        <fieldset
          className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
        >
          hello world
          <div
            className="ds-u-margin-top--5"
          >
            <Button
              onClick={[Function]}
              type="button"
              variation="transparent"
            >
              Cancel
            </Button>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="ds-l-col--1 ds-u-fill--white ds-u-margin-right--auto"
    />
  </div>
</div>
`;
